backend/src/lang/CParser.ts
// Generated from ./src/lang/C.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CListener } from "./CListener";
import { CVisitor } from "./CVisitor";


export class CParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly Auto = 2;
	public static readonly Break = 3;
	public static readonly Case = 4;
	public static readonly Char = 5;
	public static readonly Const = 6;
	public static readonly Continue = 7;
	public static readonly Default = 8;
	public static readonly Do = 9;
	public static readonly Double = 10;
	public static readonly Else = 11;
	public static readonly Enum = 12;
	public static readonly Extern = 13;
	public static readonly Float = 14;
	public static readonly For = 15;
	public static readonly Function = 16;
	public static readonly Goto = 17;
	public static readonly If = 18;
	public static readonly Inline = 19;
	public static readonly Int = 20;
	public static readonly Long = 21;
	public static readonly Let = 22;
	public static readonly Register = 23;
	public static readonly Restrict = 24;
	public static readonly Return = 25;
	public static readonly Short = 26;
	public static readonly Signed = 27;
	public static readonly Sizeof = 28;
	public static readonly Static = 29;
	public static readonly Struct = 30;
	public static readonly Switch = 31;
	public static readonly Typedef = 32;
	public static readonly Union = 33;
	public static readonly Unsigned = 34;
	public static readonly Void = 35;
	public static readonly Volatile = 36;
	public static readonly While = 37;
	public static readonly Alignas = 38;
	public static readonly Alignof = 39;
	public static readonly Atomic = 40;
	public static readonly Bool = 41;
	public static readonly Complex = 42;
	public static readonly Generic = 43;
	public static readonly Imaginary = 44;
	public static readonly Noreturn = 45;
	public static readonly StaticAssert = 46;
	public static readonly ThreadLocal = 47;
	public static readonly LeftParen = 48;
	public static readonly RightParen = 49;
	public static readonly LeftBracket = 50;
	public static readonly RightBracket = 51;
	public static readonly LeftBrace = 52;
	public static readonly RightBrace = 53;
	public static readonly Less = 54;
	public static readonly LessEqual = 55;
	public static readonly Greater = 56;
	public static readonly GreaterEqual = 57;
	public static readonly LeftShift = 58;
	public static readonly RightShift = 59;
	public static readonly Plus = 60;
	public static readonly PlusPlus = 61;
	public static readonly Minus = 62;
	public static readonly MinusMinus = 63;
	public static readonly Star = 64;
	public static readonly Div = 65;
	public static readonly Mod = 66;
	public static readonly And = 67;
	public static readonly Or = 68;
	public static readonly AndAnd = 69;
	public static readonly OrOr = 70;
	public static readonly Caret = 71;
	public static readonly Not = 72;
	public static readonly Tilde = 73;
	public static readonly Question = 74;
	public static readonly Colon = 75;
	public static readonly Semi = 76;
	public static readonly Comma = 77;
	public static readonly Assign = 78;
	public static readonly StarAssign = 79;
	public static readonly DivAssign = 80;
	public static readonly ModAssign = 81;
	public static readonly PlusAssign = 82;
	public static readonly MinusAssign = 83;
	public static readonly LeftShiftAssign = 84;
	public static readonly RightShiftAssign = 85;
	public static readonly AndAssign = 86;
	public static readonly XorAssign = 87;
	public static readonly OrAssign = 88;
	public static readonly Equal = 89;
	public static readonly NotEqual = 90;
	public static readonly Arrow = 91;
	public static readonly Dot = 92;
	public static readonly Ellipsis = 93;
	public static readonly Identifier = 94;
	public static readonly Constant = 95;
	public static readonly DigitSequence = 96;
	public static readonly StringLiteral = 97;
	public static readonly ComplexDefine = 98;
	public static readonly IncludeDirective = 99;
	public static readonly AsmBlock = 100;
	public static readonly LineAfterPreprocessing = 101;
	public static readonly LineDirective = 102;
	public static readonly PragmaDirective = 103;
	public static readonly Whitespace = 104;
	public static readonly Newline = 105;
	public static readonly BlockComment = 106;
	public static readonly LineComment = 107;
	public static readonly RULE_program = 0;
	public static readonly RULE_line = 1;
	public static readonly RULE_declaration = 2;
	public static readonly RULE_variableDeclaration = 3;
	public static readonly RULE_initDeclaratorList = 4;
	public static readonly RULE_initDeclarator = 5;
	public static readonly RULE_initializer = 6;
	public static readonly RULE_initializerList = 7;
	public static readonly RULE_declarator = 8;
	public static readonly RULE_directDeclarator = 9;
	public static readonly RULE_pointer = 10;
	public static readonly RULE_statement = 11;
	public static readonly RULE_functionDeclaration = 12;
	public static readonly RULE_parameterList = 13;
	public static readonly RULE_parameter = 14;
	public static readonly RULE_blockStatement = 15;
	public static readonly RULE_expressionStatement = 16;
	public static readonly RULE_ifStatement = 17;
	public static readonly RULE_iterationStatement = 18;
	public static readonly RULE_forCondition = 19;
	public static readonly RULE_forDeclaration = 20;
	public static readonly RULE_forExpression = 21;
	public static readonly RULE_jumpStatement = 22;
	public static readonly RULE_expression = 23;
	public static readonly RULE_assignmentExpression = 24;
	public static readonly RULE_assignmentOperator = 25;
	public static readonly RULE_conditionalExpression = 26;
	public static readonly RULE_logicalOrExpression = 27;
	public static readonly RULE_logicalAndExpression = 28;
	public static readonly RULE_inclusiveOrExpression = 29;
	public static readonly RULE_exclusiveOrExpression = 30;
	public static readonly RULE_andExpression = 31;
	public static readonly RULE_equalityExpression = 32;
	public static readonly RULE_equalityOperator = 33;
	public static readonly RULE_relationalExpression = 34;
	public static readonly RULE_relationalOperator = 35;
	public static readonly RULE_shiftExpression = 36;
	public static readonly RULE_shiftOperator = 37;
	public static readonly RULE_additiveExpression = 38;
	public static readonly RULE_additiveOperator = 39;
	public static readonly RULE_multiplicativeExpression = 40;
	public static readonly RULE_multiplicativeOperator = 41;
	public static readonly RULE_unaryExpression = 42;
	public static readonly RULE_unaryOperator = 43;
	public static readonly RULE_postfixExpression = 44;
	public static readonly RULE_argumentExpressionList = 45;
	public static readonly RULE_primaryExpression = 46;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "line", "declaration", "variableDeclaration", "initDeclaratorList", 
		"initDeclarator", "initializer", "initializerList", "declarator", "directDeclarator", 
		"pointer", "statement", "functionDeclaration", "parameterList", "parameter", 
		"blockStatement", "expressionStatement", "ifStatement", "iterationStatement", 
		"forCondition", "forDeclaration", "forExpression", "jumpStatement", "expression", 
		"assignmentExpression", "assignmentOperator", "conditionalExpression", 
		"logicalOrExpression", "logicalAndExpression", "inclusiveOrExpression", 
		"exclusiveOrExpression", "andExpression", "equalityExpression", "equalityOperator", 
		"relationalExpression", "relationalOperator", "shiftExpression", "shiftOperator", 
		"additiveExpression", "additiveOperator", "multiplicativeExpression", 
		"multiplicativeOperator", "unaryExpression", "unaryOperator", "postfixExpression", 
		"argumentExpressionList", "primaryExpression",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'[]'", "'auto'", "'break'", "'case'", "'char'", "'const'", 
		"'continue'", "'default'", "'do'", "'double'", "'else'", "'enum'", "'extern'", 
		"'float'", "'for'", "'function'", "'goto'", "'if'", "'inline'", "'int'", 
		"'long'", "'let'", "'register'", "'restrict'", "'return'", "'short'", 
		"'signed'", "'sizeof'", "'static'", "'struct'", "'switch'", "'typedef'", 
		"'union'", "'unsigned'", "'void'", "'volatile'", "'while'", "'_Alignas'", 
		"'_Alignof'", "'_Atomic'", "'_Bool'", "'_Complex'", "'_Generic'", "'_Imaginary'", 
		"'_Noreturn'", "'_Static_assert'", "'_Thread_local'", "'('", "')'", "'['", 
		"']'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", 
		"'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'&'", "'|'", "'&&'", "'||'", 
		"'^'", "'!'", "'~'", "'?'", "':'", "';'", "','", "'='", "'*='", "'/='", 
		"'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", "'=='", 
		"'!='", "'->'", "'.'", "'...'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, "Auto", "Break", "Case", "Char", "Const", "Continue", 
		"Default", "Do", "Double", "Else", "Enum", "Extern", "Float", "For", "Function", 
		"Goto", "If", "Inline", "Int", "Long", "Let", "Register", "Restrict", 
		"Return", "Short", "Signed", "Sizeof", "Static", "Struct", "Switch", "Typedef", 
		"Union", "Unsigned", "Void", "Volatile", "While", "Alignas", "Alignof", 
		"Atomic", "Bool", "Complex", "Generic", "Imaginary", "Noreturn", "StaticAssert", 
		"ThreadLocal", "LeftParen", "RightParen", "LeftBracket", "RightBracket", 
		"LeftBrace", "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", 
		"LeftShift", "RightShift", "Plus", "PlusPlus", "Minus", "MinusMinus", 
		"Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", 
		"Question", "Colon", "Semi", "Comma", "Assign", "StarAssign", "DivAssign", 
		"ModAssign", "PlusAssign", "MinusAssign", "LeftShiftAssign", "RightShiftAssign", 
		"AndAssign", "XorAssign", "OrAssign", "Equal", "NotEqual", "Arrow", "Dot", 
		"Ellipsis", "Identifier", "Constant", "DigitSequence", "StringLiteral", 
		"ComplexDefine", "IncludeDirective", "AsmBlock", "LineAfterPreprocessing", 
		"LineDirective", "PragmaDirective", "Whitespace", "Newline", "BlockComment", 
		"LineComment",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CParser._LITERAL_NAMES, CParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "C.g4"; }

	// @Override
	public get ruleNames(): string[] { return CParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CParser.RULE_program);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 97;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 94;
					this.line();
					}
					}
				}
				this.state = 99;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 101;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 48)) & ~0x1F) === 0 && ((1 << (_la - 48)) & ((1 << (CParser.LeftParen - 48)) | (1 << (CParser.Plus - 48)) | (1 << (CParser.PlusPlus - 48)) | (1 << (CParser.Minus - 48)) | (1 << (CParser.MinusMinus - 48)) | (1 << (CParser.Star - 48)) | (1 << (CParser.And - 48)) | (1 << (CParser.Not - 48)) | (1 << (CParser.Tilde - 48)))) !== 0) || ((((_la - 94)) & ~0x1F) === 0 && ((1 << (_la - 94)) & ((1 << (CParser.Identifier - 94)) | (1 << (CParser.Constant - 94)) | (1 << (CParser.DigitSequence - 94)) | (1 << (CParser.StringLiteral - 94)))) !== 0)) {
				{
				this.state = 100;
				this.expression();
				}
			}

			this.state = 103;
			this.match(CParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public line(): LineContext {
		let _localctx: LineContext = new LineContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, CParser.RULE_line);
		try {
			this.state = 107;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 105;
				this.statement();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 106;
				this.declaration();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declaration(): DeclarationContext {
		let _localctx: DeclarationContext = new DeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CParser.RULE_declaration);
		try {
			this.state = 111;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CParser.Let:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 109;
				this.variableDeclaration();
				}
				break;
			case CParser.Function:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 110;
				this.functionDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let _localctx: VariableDeclarationContext = new VariableDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CParser.RULE_variableDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this.match(CParser.Let);
			this.state = 115;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CParser.Star || _la === CParser.Identifier) {
				{
				this.state = 114;
				this.initDeclaratorList();
				}
			}

			this.state = 117;
			this.match(CParser.Semi);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public initDeclaratorList(): InitDeclaratorListContext {
		let _localctx: InitDeclaratorListContext = new InitDeclaratorListContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, CParser.RULE_initDeclaratorList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			this.initDeclarator();
			this.state = 124;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CParser.Comma) {
				{
				{
				this.state = 120;
				this.match(CParser.Comma);
				this.state = 121;
				this.initDeclarator();
				}
				}
				this.state = 126;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public initDeclarator(): InitDeclaratorContext {
		let _localctx: InitDeclaratorContext = new InitDeclaratorContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, CParser.RULE_initDeclarator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			this.declarator();
			this.state = 130;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CParser.Assign) {
				{
				this.state = 128;
				this.match(CParser.Assign);
				this.state = 129;
				this.initializer();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public initializer(): InitializerContext {
		let _localctx: InitializerContext = new InitializerContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, CParser.RULE_initializer);
		let _la: number;
		try {
			this.state = 140;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CParser.LeftParen:
			case CParser.Plus:
			case CParser.PlusPlus:
			case CParser.Minus:
			case CParser.MinusMinus:
			case CParser.Star:
			case CParser.And:
			case CParser.Not:
			case CParser.Tilde:
			case CParser.Identifier:
			case CParser.Constant:
			case CParser.DigitSequence:
			case CParser.StringLiteral:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 132;
				this.assignmentExpression();
				}
				break;
			case CParser.LeftBrace:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 133;
				this.match(CParser.LeftBrace);
				this.state = 134;
				this.initializerList();
				this.state = 136;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CParser.Comma) {
					{
					this.state = 135;
					this.match(CParser.Comma);
					}
				}
